[tool.poetry]
name = "asoc"
version = "0.1.0"
description = ""
authors = ["Renne Rocha <renne@rennerocha.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.17"
fastapi = "^0.54.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
