[tool.poetry]
name = "asoc"
version = "0.1.0"
description = ""
authors = ["Renne Rocha <renne@rennerocha.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.17"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.23.0"
pidb = "^0.0.2"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
